--- a/settings.json
+++ b/settings.json
@@ -7,19 +7,19 @@
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
+	"ownerNumber": "917907531097",
+	"ownerNumberr": "917907531097",
 	"cr": "@ZeeoneOfc",
-	"yt":"bit.ly/ytzeeoneofc",
-	"grub": "bit.ly/gczeeoneofc",
-	"wa": "bit.ly/wazeeoneofc",
-	"donate": "bit.ly/dtzeeoneofc",
-	"ig": "bit.ly/igzeeoneofc",
-	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "ZeeoneOfc",
-	"botname":"ΛᄂPΉΛ BӨƬ",
-	"img":"https://e.top4top.io/p_2010lz9211.jpg",
-	"thumb":"IMG_20211001_074948_766-min.jpg",
-	"fakethumb":"IMG_20211001_074948_766-min.jpg", 
-	"fake": " 「  Alphabot  」\nCreated By @ZeeoneOfc"
+	"yt":"https://youtube.com/channel/UCxRHOVomU9Z0w1Vmz8aX-Ig",
+	"grub": "not available",
+	"wa": "Wa.me/917907531097",
+	"donate": "not available",
+	"ig": "www.instagram.com/unnisettan_5",
+	"gt": "Instagram follow",	
+	"ownername": "Akshay/unnisettan",
+	"botname":"ᑭYTᕼOᑎ ᐯ1",
+	"img":"https://ibb.co/KyKnMZQ",
+	"thumb":"https://ibb.co/KyKnMZQ",
+	"fakethumb":"https://ibb.co/KyKnMZQ", 
+	"fake": " 「  ᑭYTᕼOᑎᗷOT  」\nCreated By @ᴜɴͥɴͭɪᷤsᴇͫᴛͤᴛᴀɴ"
 }
