--- a/settings.json
+++ b/settings.json
@@ -1,48 +1,25 @@
 {
-
     "self_mode": true,
-
-	"autobio": true,	"antihidetag": true,
-
+	"autobio": true,
+	"antihidetag": true,
 	"user_register": true,
-
 	"antidelete" : false,
-
 	"anticall": true,
-
 	"prefix": ".",
-
 	"language":"ind",
-
 	"ownerNumber": "62887435047326",
-
 	"ownerNumberr": "62887435047326",
-
 	"cr": "@ZeeoneOfc",
-
 	"yt":"bit.ly/ytzeeoneofc",
-
 	"grub": "bit.ly/gczeeoneofc",
-
 	"wa": "bit.ly/wazeeoneofc",
-
 	"donate": "bit.ly/dtzeeoneofc",
-
 	"ig": "bit.ly/igzeeoneofc",
-
 	"gt": "bit.ly/gtzeeoneofc",	
-
 	"ownername": "ZeeoneOfc",
-
 	"botname":"ΛᄂPΉΛ BӨƬ",
-
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
-
 	"thumb":"IMG_20211001_074948_766-min.jpg",
-
 	"fakethumb":"IMG_20211001_074948_766-min.jpg", 
-
 	"fake": " 「  Alphabot  」\nCreated By @ZeeoneOfc"
-
 }
-
